Correcting the title words case.

--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -13,7 +13,7 @@
 %	mainlanguage = czech,
 	otherlanguages = {czech,english},
 	title-czech = {Rádiové určování polohy letících objektů},
-	title-english = {Radio position determination of the flying objects},
+	title-english = {Radio Position Determination of Flying Objects},
 %	subtitle-czech = {Cesta do tajů kdovíčeho},
 %	subtitle-english = {Journey to the who-knows-what wondeland},
 	doctype = D,
@@ -32,8 +32,8 @@
 	subfieldofstudy-czech = {Rádiová navigace},
 	keywords-czech = {Radar, GRAVES, meteor, výpočet trajektorie metoru },
 	keywords-english = {Multi-static radar system, meteor, GRAVES, trajectory estimation},
-	day = 3,
-	month = 2,
+	day = 2,
+	month = 5,
 	year = 2017,
 %	specification-file = {ctutest-zadani.pdf},
 %	front-specification = true,
