--- a/Thesis-proposal.tex
+++ b/Thesis-proposal.tex
@@ -95,7 +95,7 @@
 \maketitle
 
 \chapter{Motivation}
-Radio position determination of flying objects is a key radiolocation discipline which allows safe operation of aircraft and spaceships. The radar systems developed in last decades have parameters enough to solve standard situations \cite{Radar_basics}. However, some safety problems related to unusual conditions are not resolved yet \cite{lightning_dose1}. These situations could be caused by extremal weather events like thunderstorms for example, where lightning can damage an airplane or limit a radio communication and navigation capabilities in affected area \cite{lightning_dose2}. Additionally, according to recent scientific discoveries, lightning discharges can produce an ionizing radiation which could significantly enhance an effective dose of aircraft crew and passengers \cite{lightning_dose3}, \cite{lightning_dose4}, \cite{lightning_dose6}. 
+Radio position determination of flying objects is a key radiolocation discipline which allows safe operation of aircraft and spaceships. The radar systems developed in last decades have enough properties to solve standard situations \cite{Radar_basics}. However, some safety problems related to unusual conditions are not resolved yet \cite{lightning_dose1}. These situations could be caused by extremal weather events like thunderstorms for example, where lightning can damage an airplane or limit a radio communication and navigation capabilities in affected area \cite{lightning_dose2}. Additionally, according to recent scientific discoveries, lightning discharges can produce an ionizing radiation which could significantly enhance an effective dose of aircraft crew and passengers \cite{lightning_dose3}, \cite{lightning_dose4}, \cite{lightning_dose6}. 
 Therefore a research which helps quantify, predict and avoid these hazards should improve overall air traffic safety \cite{lightning_dose5}. This goal should be achieved by improving understanding of unusual atmospheric events and enhance sensing capabilities in extreme circumstances. 
 Unfortunately, hazardous conditions can have multiple different forms with different suitable detection methods which should often be combined to produce a desirable result, but at least for some cases, a radar sensing system should be a suitable option. 
 The parameters of that detection system should be universal as possible and assume possible combination with other detection methods. 
@@ -333,7 +333,6 @@ Another antenna type was proposed to overcome the issues of the previous antenna
  \end{center}
 \end{figure*}
 
-
 \begin{figure*}
  \begin{center}
  \includegraphics[width=90mm ]{./img/SC_QHA_rp_horizontal.png} 
@@ -342,9 +341,6 @@ Another antenna type was proposed to overcome the issues of the previous antenna
   \label{fig:QHA_antenna_RP} 
  \end{center}
 \end{figure*}
-
-
-
 
 \section{Meteor trajectory determination}
 
@@ -397,12 +393,53 @@ This hypothesis verification is a primary challenge for future work because curr
 \bibitem{Radar_basics}
 Small and Short-Range Radar Systems,Gregory L. Charvat, CRC Press 2014,Pages 1–35, Print ISBN: 978-1-4398-6599-6,eBook ISBN: 978-1-4398-6600-9
 
+\bibitem{lightning_dose1}
+J. R. Dwyer, D. M. Smith, M. A. Uman, et. al.,
+Estimation of the fluence of high-energy electron bursts produced by thunderclouds and the resulting radiation doses received in aircraft
+\emph{JOURNAL OF GEOPHYSICAL RESEARCH, VOL. 115, D09206}, doi:10.1029/2009JD012039, 2010
+
+\bibitem{lightning_dose2}
+D. Petersen, M. Bailey, W. H. Beasley, J. Hallett,
+A brief review of the problem of lightning initiation and a hypothesis of initial lightning leader formation
+\emph{JOURNAL OF GEOPHYSICAL RESEARCH, VOL. 113, D17205}, doi:10.1029/2007JD009036, 2008
+
+\bibitem{lightning_dose3}
+T. Torii, M. Takeishi, T. Hosono,
+Observation of gamma-ray dose increase associated with winter thunderstorm and lightning activity
+\emph{JOURNAL OF GEOPHYSICAL RESEARCH, VOL. 107, NO. D17, 4324}, doi:10.1029/2001JD000938, 2002
+
+\bibitem{lightning_dose4}
+A Drozdov, A Grigoriev
+Neutrons from thunderstorms at low atmospheric altitudes and related doses at aircraft
+\emph{23rd European Cosmic Ray Symposium (and 32nd Russian Cosmic Ray Conference)}, doi:10.1088/1742-6596/409/1/012246
+
+\bibitem{lightning_dose5}
+A. Chilingarian
+Thunderstorm Ground Enhancements (TGEs) - New High - Energy Phenomenon Originated in the Terrestrial Atmosphere
+\emph{23rd European Cosmic Ray Symposium (and 32nd Russian Cosmic Ray Conference)}, doi:10.1088/1742-6596/409/1/012019
+
+\bibitem{lightning_dose6}
+K. B. Eack, W. H. Beasley
+Long-duration X-ray emissions observed in thunderstorms
+\emph{Journal of Geophysical Research: Atmospheres}, doi:10.1002/2015JD023262
+
+\bibitem{BRAMS}
+LAMY, H., ANCIAUX, M., RANVIER, S.,
+Recent advances in the BRAMS network
+\emph{Proceedings of the International Meteor Conference}, Mistelbach, Austria, 27-30 August 2015, Eds.: Rault, J.-L.; Roggemans, P., International Meteor Organization, ISBN 978-2-87355-029-5, pp. 171-175
+
+\bibitem{NMLMA}
+Rison, W., R.J. Thomas, P.R. Krehbiel, T. Hamlin, and J. Harlin, A GPS-based Three-Dimensional Lightning Mapping System: Initial Observations in Central New Mexico
+\emph{Geophysical Research Letters, 26, 3573-3576, 1999}
+
+\bibitem{LOFAR}
+K. Mikhailov, J. van Leeuwen, 
+The LOFAR search for radio pulsars and fast transients in M33, M81 and M82,
+\emph{Astrophysics of Galaxies, A\&A 593, A21 (2016)}, DOI: 10.1051/0004-6361/201628348
+
 \bibitem{LOPES}
 F. G. Schröder, Instruments and Methods for the Radio Detection of High Energy Cosmic Rays,
 \emph{DISSERTATION}, Tag der mündlichen Prüfung: 11. Februar 2011
-
-\bibitem{LOFAR}
-K. Mikhailov, J. van Leeuwen, The LOFAR search for radio pulsars and fast transients in M33, M81 and M82,Astrophysics of Galaxies, A\&A 593, A21 (2016), DOI: 10.1051/0004-6361/201628348
 
 \bibitem{LOFAR_showers}
 Radio detection of air showers with LOFAR and AERA - LOFAR key science project Cosmic Rays and Pierre Auger Collaborations (Hörandel, Jörg R. for the collaboration) JPS Conf.Proc. 9 (2016) 010004 arXiv:1509.04960 [astro-ph.HE]
@@ -431,7 +468,6 @@ RETRAM: A network of passive radars to detect and
 track meteors
 978-1-4799-4195-7/14/31.002014IEEE
 
-
 \bibitem{light_pollution}
 KAC, J.,
 Meteor Observation and the Light Pollution
@@ -454,7 +490,6 @@ DOI 10.1007/s11038-007-9154-6
 J. Kakona, M. Kakona, M. Poviser, et. al.
 Bolidozor radio meteor detection network
 \emph{roceedings of the IMC} (Mistelbach, 2015)
-
 
 \bibitem{IMPACT_sensor}
 C.T. Mata, J.G. Wilson,
@@ -481,10 +516,6 @@ and Error Analyses
 J. D. Hill, J. Pilkey,M. A. Uman, et. al.
 Correlated lightning mapping array and radar observations of the initial stages of three sequentially triggered Florida lightning discharges
 \emph{JOURNAL OF GEOPHYSICAL RESEARCH: ATMOSPHERES} (, VOL. 118, 8460–8481, doi:10.1002/jgrd.50660, 2013) 
-
-\bibitem{NMLMA}
-Rison, W., R.J. Thomas, P.R. Krehbiel, T. Hamlin, and J. Harlin, A GPS-based Three-Dimensional Lightning Mapping System: Initial Observations in Central New Mexico
-\emph{Geophysical Research Letters, 26, 3573-3576, 1999}
 
 \bibitem{Transient_peak}
 C. E. Livingstone,
@@ -521,45 +552,10 @@ WISLEZ, J.-M.,
 Forward scattering of radio waves off meteor trails
 \emph{Proceedings of the International Meteor Conference}, Brandenburg, Germany, 1995, p. 99-117
 
-\bibitem{lightning_dose1}
-J. R. Dwyer, D. M. Smith, M. A. Uman, et. al.,
-Estimation of the fluence of high-energy electron bursts produced by thunderclouds and the resulting radiation doses received in aircraft
-\emph{JOURNAL OF GEOPHYSICAL RESEARCH, VOL. 115, D09206}, doi:10.1029/2009JD012039, 2010
-
-\bibitem{lightning_dose2}
-D. Petersen, M. Bailey, W. H. Beasley, J. Hallett,
-A brief review of the problem of lightning initiation and a hypothesis of initial lightning leader formation
-\emph{JOURNAL OF GEOPHYSICAL RESEARCH, VOL. 113, D17205}, doi:10.1029/2007JD009036, 2008
-
-\bibitem{lightning_dose3}
-T. Torii, M. Takeishi, T. Hosono,
-Observation of gamma-ray dose increase associated with winter thunderstorm and lightning activity
-\emph{JOURNAL OF GEOPHYSICAL RESEARCH, VOL. 107, NO. D17, 4324}, doi:10.1029/2001JD000938, 2002
-
-\bibitem{lightning_dose4}
-A Drozdov, A Grigoriev
-Neutrons from thunderstorms at low atmospheric altitudes and related doses at aircraft
-\emph{23rd European Cosmic Ray Symposium (and 32nd Russian Cosmic Ray Conference)}, doi:10.1088/1742-6596/409/1/012246
-
-\bibitem{lightning_dose5}
-A. Chilingarian
-Thunderstorm Ground Enhancements (TGEs) - New High - Energy Phenomenon Originated in the Terrestrial Atmosphere
-\emph{23rd European Cosmic Ray Symposium (and 32nd Russian Cosmic Ray Conference)}, doi:10.1088/1742-6596/409/1/012019
-
-\bibitem{lightning_dose6}
-K. B. Eack, W. H. Beasley
-Long-duration X-ray emissions observed in thunderstorms
-\emph{Journal of Geophysical Research: Atmospheres}, doi:10.1002/2015JD023262
-
 \bibitem{daylight_shover}
 CLEGG, J. A. ,HUGHES,  V. A. A., LOVELL, C. B., 
 The Daylight Meteor Streams of 1947 May-August
 \emph{Monthly Notices of the Royal Astronomical Society}, Vol. 107, p.369
-
-\bibitem{BRAMS}
-LAMY, H., ANCIAUX, M., RANVIER, S.,
-Recent advances in the BRAMS network
-\emph{Proceedings of the International Meteor Conference}, Mistelbach, Austria, 27-30 August 2015, Eds.: Rault, J.-L.; Roggemans, P., International Meteor Organization, ISBN 978-2-87355-029-5, pp. 171-175
 
 \bibitem{Decay_time}
 POOLE, L. M. G.,
